--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,17 @@
     font-family: 'poppins', sans-serif;
 }
 
+video{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+
 body{
     display: flex;
     justify-content: center;
