--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,9 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
-
+/* we added glass effect from css.glass */
 video{
     position: absolute;
     width: 100%;
@@ -13,6 +13,13 @@ video{
     top: 0;
     left: 0;
     z-index: -1;
+/* From https://css.glass */
+background: rgba(255, 255, 255, 0.33);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(4.2px);
+-webkit-backdrop-filter: blur(4.2px);
+border: 1px solid rgba(255, 255, 255, 0.58);
 }
 
 
@@ -24,8 +31,8 @@ body{
 }
 
 .wrapper{
-    width: 120px;
-    color: black;
+    width: 420px;
+    color: white;
     border-radius: 10px;
     padding: 30px 40px;
 }
@@ -50,14 +57,14 @@ body{
     outline: none;
     border-radius: 40px;
     font-size: 16px;
-    border: 2px solid black;
-    color: black;
+    border: 2px solid white;
+    color: white;
     padding: 20px 45px 20px 20px;
 }
 
 .input-box i{
     position: absolute;
-    right: 2opx;
+    right: 20px;
     top: 50%;
     transform: translateY(-50%);
     font-size: 20px;
